# open-recorder

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  continue-plan.md  flake.nix  future-features.md  plan.md  release-plz.toml
.github/: SMOKE_ACTIONS
.github/workflows/: ci.yml  manual-version-bump.yml  release.yml
crates/ord-cli/: Cargo.toml
crates/ord-cli/src/: doctor.rs  export_cmd.rs  main.rs
crates/ord-common/: Cargo.toml  build.rs
crates/ord-common/src/: bitrate.rs  client.rs  config.rs  frame.rs  ipc.rs  lib.rs  newtypes.rs  sync.rs  transport.rs  version.rs
crates/ord-core/: Cargo.toml
crates/ord-core/benches/: hotpath.rs  mux_latency.rs
crates/ord-core/src/: audio.rs  audio_route.rs  backend.rs  clip.rs  disk_store.rs  encode_health.rs  engine.rs  lib.rs  mux.rs  order.rs  record.rs  ring.rs  store.rs  waycap_backend.rs
crates/ord-core/src/mux/: annexb.rs  bitstream.rs  stream.rs
crates/ord-core/tests/: mux_golden.rs  record_golden.rs  record_replay.rs
crates/ord-core/tests/common/: mod.rs
crates/ord-daemon/: Cargo.toml
crates/ord-daemon/src/: gamedetect.rs  handler.rs  hook.rs  lib.rs  main.rs  outputs.rs  server.rs  storage.rs  supervisor.rs
crates/ord-export/: Cargo.toml
crates/ord-export/src/: lib.rs  plan.rs  probe.rs  profile.rs  run.rs
crates/ord-export/tests/: export_bench.rs  export_e2e.rs  run_fake_ffmpeg.rs
crates/ord-overlay/: Cargo.toml
crates/ord-overlay/assets/fonts/: LICENSES.md
crates/ord-overlay/examples/: hud_demo.rs
crates/ord-overlay/src/: apply.rs  hud.rs  key_source.rs  layershell.rs  lib.rs  wrap.rs
crates/ord-ui/: Cargo.toml
crates/ord-ui/assets/fonts/: LICENSES.md
crates/ord-ui/src/: a11y.rs  app.rs  diag.rs  edit_history.rs  editor.rs  fonts.rs  format.rs  glvideo.rs  layout.rs  lib.rs  library.rs  main.rs  markers.rs  meta.rs  pace.rs  player.rs  prefs.rs  preview.rs  project.rs  settings.rs  settings_view.rs  theme.rs  timeline.rs  tuning.rs  waveform.rs
crates/ord-ui/tests/: bench.rs  player_smoke.rs
docs/: architecture.md  backends.md  hdr.md  overlay.md  performance.md  releasing.md  roadmap-status.md  spike-results.md  testing.md
spike/: Cargo.toml
spike/src/: main.rs
