[workspace]
resolver = "2"
members = [
    "crates/ord-common",
    "crates/ord-core",
    "crates/ord-export",
    "crates/ord-daemon",
    "crates/ord-cli",
    "crates/ord-overlay",
    "crates/ord-ui",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
# Minimum supported Rust version. 1.87 stabilized `u32::is_multiple_of`, used on
# the hot path. CI uses stable (>= this); the nix devshell's rustc is canonical.
rust-version = "1.87"
license = "MIT"
authors = ["Grok Insider <admin@grokinsider.net>"]
repository = "https://github.com/grok-insider/open-recorder"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ffmpeg-next = "8"
ord-common = { path = "crates/ord-common" }
ord-core = { path = "crates/ord-core" }
ord-export = { path = "crates/ord-export" }

# Release profile for the shipped binaries. This is a latency-sensitive recorder,
# so tune for runtime over build time (the cachix cache absorbs the longer build):
#   - thin LTO + a single codegen unit: better cross-crate inlining on the hot
#     capture/ring/mux path with far less build cost than "fat" LTO.
#   - strip symbols: smaller binaries in the nix closure.
# NOTE: panic stays "unwind" on purpose — the daemon recovers from poisoned locks
# (a panic in one thread must not abort the whole process and re-open the OOM).
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# Repo-wide lints so `cargo clippy` and the editor surface the same gate CI
# enforces with `-D warnings`. Kept at "warn" here (CI denies); priority -1 lets
# individual `#[allow(...)]` override.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
