# Phase-1 spike — throwaway validation binary, NOT part of the eventual
# workspace. Confirms waycap-rs delivers zero-copy DMA-BUF capture + NVENC HEVC
# encoded frames on the NVIDIA 610 open driver before we build the product on it.
[package]
name = "ord-spike"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "ord-spike"
path = "src/main.rs"

[dependencies]
# waycap-rs 3.x is not published to crates.io yet (latest published is 2.1.2),
# so pin the GitHub main branch by commit for reproducibility. The 3.0 API
# (CaptureBuilder::with_video_encoder + EncodedVideoFrame{is_keyframe,pts,dts})
# is what this spike targets.
# nvidia (NVENC) requires a GL/Vulkan context backend too; egl is the lighter
# pairing (vulkan would pull ash + a full vk context). default-features=false
# drops vaapi.
waycap-rs = { git = "https://github.com/Adonca2203/waycap-rs.git", rev = "493c1c6898afa941978d2d09fccd12b10fa6b27f", default-features = false, features = ["nvidia", "egl"] }
# Exercise the real production muxer (ord-core::write_clip).
ord-core = { path = "../crates/ord-core", features = ["mux"] }
crossbeam = "0.8"
log = "0.4"
simple-logging = "2"
