[package]
name = "ord-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-recorder CLI (ord): control the daemon over its socket"

[[bin]]
name = "ord"
path = "src/main.rs"

[dependencies]
ord-common.workspace = true
ord-export.workspace = true
thiserror.workspace = true
serde_json.workspace = true

[lints]
workspace = true
