[package]
name = "ord-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types and IPC protocol for open-recorder"

[dependencies]
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
