[package]
name = "ord-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-recorder capture/encode engine: ring buffer + keyframe-aware clip selection"

[dependencies]
ord-common.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes = "1"
ffmpeg-next = { workspace = true, optional = true }
crossbeam = { version = "0.8", optional = true }
waycap-rs = { git = "https://github.com/0xfell/waycap-rs.git", rev = "2e4e317b893a048be90132adb5eec964acb324fe", default-features = false, features = ["nvidia", "egl"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "hotpath"
harness = false

[[bench]]
name = "mux_latency"
harness = false

[features]
# `mux` pulls in ffmpeg-next (needs the system ffmpeg libs at build time). Off by
# default so the pure logic (ring/clip/engine/backend) builds and tests in CI
# without ffmpeg. The daemon enables it.
#
# `waycap` pulls in waycap-rs (PipeWire DMA-BUF + NVENC) for the real capture
# backend. Needs the GPU/CUDA toolchain; off in CI. Implies `mux`.
default = []
mux = ["dep:ffmpeg-next"]
waycap = ["dep:waycap-rs", "dep:crossbeam", "mux"]

[lints]
workspace = true
