[package]
name = "ord-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-recorder background daemon (ordd): capture supervision + control socket"

[[bin]]
name = "ordd"
path = "src/main.rs"

[dependencies]
ord-common.workspace = true
ord-core.workspace = true
thiserror.workspace = true
dirs.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# signal-hook is the unix-signal (SIGTERM/SIGINT) socket-cleanup path; off-unix
# the daemon installs a no-op handler, so the dependency is unix-only.
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[features]
# The shipped daemon records for real; CI builds the default (mock) daemon to
# run the handler/socket integration tests without a GPU.
#
# `waycap` (real NVENC recorder) implies `mux` so the daemon's own
# #[cfg(feature = "mux")] clip writer is active — otherwise saves would report
# success but write nothing.
default = []
mux = ["ord-core/mux"]
waycap = ["ord-core/waycap", "mux"]

[lints]
workspace = true
