[package]
name = "ord-export"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-recorder smart export: AV1/HEVC/H264 NVENC transcode + HandBrake-style manual options, driven via ffmpeg"

[dependencies]
ord-common.workspace = true
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[lints]
workspace = true
