[package]
name = "ord-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "open-recorder clip library GUI (egui)"

[[bin]]
name = "ord-ui"
path = "src/main.rs"

[dependencies]
ord-common.workspace = true
ord-export = { workspace = true, optional = true }
thiserror.workspace = true
eframe = { version = "0.29", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg"], optional = true }

[features]
# `gui` pulls in eframe/egui (needs system GL/Wayland libs) plus image decoding
# for thumbnails and ord-export for the Export action. Off in CI so the pure
# clip-library scanning + formatting logic builds and tests without a display.
default = []
gui = ["dep:eframe", "dep:image", "dep:ord-export"]
